--- a/common/templates/signup.html
+++ b/common/templates/signup.html
@@ -27,7 +27,7 @@
 
 
 {% block subhead %}
-<h3 style='display: inline;'><a style='color: gray; margin-right: 18px;' href='#'>Home</a></h3>
+<h3 style='display: inline;'><a style='color: gray; margin-right: 18px;' href='{% url "index" %}'>Home</a></h3>
 <h3 style='display: inline;'><a style='color: gray; margin-right: 18px;' href='{% url "signin" %}'>Signin</a></h3>
 {% endblock %}
 
