--- a/common/templates/index.html
+++ b/common/templates/index.html
@@ -15,7 +15,7 @@
 <h2>Simple, Stupid and useful monitoring tool.</h2>
 <ul>
   <li>Lightweigh client, all it does is take screenshots.</li>
-  <li>Clean web ui, nothing else to show.</li>
+  <li>Clean web ui, nothing much to show.</li>
   <li>Mozjpeg compression, screenshots are ugly but cheap to store, fast to retrieve!</li>
 </ul>
 <h3>Client</h3>
